fixed horizontal scroll bar issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    
+}
+html, body{
+    width: 100%;
 }
 
 /* generating common elements */
@@ -46,7 +49,7 @@
 /* webpage designing */
 
 .head{
-    width: 100vw;
+    width: 100%;
 }
 
 .hero-section{ 
@@ -119,6 +122,7 @@ nav{
     text-align: center;
     border-radius: 24px;
     margin: 115px auto;
+    padding-top: 50px;
 }
 .users-section-title{
     font-size: 38px;
